[gd_scene load_steps=8 format=3 uid="uid://level_select"]

[ext_resource type="Script" path="res://scripts/LevelSelect.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/fonts/Vazir.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBox_level_locked"]
bg_color = Color(0.2, 0.2, 0.25, 0.8)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBox_level_unlocked"]
bg_color = Color(0.25, 0.35, 0.5, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.7, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBox_level_completed"]
bg_color = Color(0.2, 0.4, 0.3, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("2_font")
font_size = 36
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_level"]
font = ExtResource("2_font")
font_size = 28
font_color = Color(1, 1, 1, 1)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "←"

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "انتخاب مرحله"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="ChapterTabs" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 90.0
offset_right = -20.0
offset_bottom = 140.0
alignment = 1
theme_override_constants/separation = 10

[node name="Chapter1" type="Button" parent="ChapterTabs"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
text = "فصل ۱"

[node name="Chapter2" type="Button" parent="ChapterTabs"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
text = "فصل ۲"

[node name="Chapter3" type="Button" parent="ChapterTabs"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
text = "فصل ۳"

[node name="Chapter4" type="Button" parent="ChapterTabs"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
text = "فصل ۴"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 150.0
offset_right = -20.0
offset_bottom = -20.0
horizontal_scroll_mode = 0

[node name="LevelsGrid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 5
